# bing-wallpaper-lib

./: .gitignore  AGENTS.md  Cargo.toml  README.md  README.zh-CN.md  build.rs  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: mirror-release-to-gitee.yml  mirror-to-gitee.yml  sync-wallpaper-archive.yml
assets/data/: zxyongyo-bing-wallpaper-corrections.json  zxyongyo-bing-wallpaper.json
docs/: release-notes-v0.1.0.md  release-notes-v0.2.27.md  release-notes-v0.2.28.md  release-notes-v0.2.29.md  release-notes-v0.2.30.md  release-notes-v0.2.31.md  release-notes-v0.2.32.md  release-notes-v0.2.33.md
ico/: icon.rc
scripts/: check_ico.ps1  generate_ico.ps1
src/: assets.rs  downloader.rs  elevate.rs  favorites.rs  fetcher.rs  folder_picker.rs  i18n.rs  local_thumbnails.rs  main.rs  model.rs  paths.rs  scheduled_wallpaper.rs  settings.rs  single_instance.rs  startup.rs  task_scheduler.rs  tray.rs  updater.rs  wallpaper_setter.rs  window_sizing.rs
src/ui/: mod.rs
